--- a/Resources/log4j.properties
+++ b/Resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.FILE.File=observations.txt
 
 # Define the layout for file appender
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.conversionPattern=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p - %m%n
+log4j.appender.FILE.layout.conversionPattern=%d{HH:mm:ss,SSS} %-5p - %m%n
 
 # Define the layout for file appender
 #log4j.appender.FILE.layout=org.apache.log4j.DateLayout
